fix contrast for accessibility

--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.css
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.css
@@ -40,7 +40,7 @@
 
 .btn-listen {
   background-color: #fff;
-  border: 1px solid var(--bs-primary-200);
+  border: 1px solid var(--bs-primary-600);
   padding: 7px 16px;
   color: var(--bs-primary-600);
 }
@@ -51,6 +51,12 @@
   color: #fff;
 }
 
+.btn-listen:focus {
+  background-color: var(--bs-primary-700);
+  padding: 7px 16px !important;
+  color: var(--bs-primary-100);
+}
+
 .btn-audio:hover {
   padding: 7px 16px !important;
   border: 0;
@@ -58,9 +64,9 @@
 
 .btn-evaluate {
   background-color: #fff;
-  border: 1px solid var(--bs-success-500);
+  border: 1px solid var(--bs-success-600);
   padding: 7px 16px !important;
-  color: var(--bs-success-500);
+  color: var(--bs-success-600);
 }
 
 .btn-evaluate:hover {
@@ -70,15 +76,12 @@
   color: var(--bs-white);
 }
 
-.btn-check:focus+.btn-evaluate,
 .btn-evaluate:focus {
-  border-radius: 6px;
-  border: 4px solid var(--bs-primary-100);
-  background-color: var(--bs-primary-100);
-  outline: 0;
-  box-shadow: 0 0 0 2px var(--bs-primary-600);
+  background-color: var(--bs-success-600);
+  border: 1px solid var(--bs-success-600);
+  padding: 7px 16px;
+  color: var(--bs-white);
 }
-
 
 .btn-circle.btn-lg {
   width: 50px;
@@ -88,6 +91,7 @@
   line-height: 1.33;
   border-radius: 25px;
 }
+
 .btn-circle.btn-xl {
   width: 70px;
   height: 70px;
@@ -95,6 +99,15 @@
   font-size: 24px;
   line-height: 1.33;
   border-radius: 35px;
+}
+
+button.mat-button .i,
+.mat-button .i,
+.mat-raised-button .i,
+.mat-flat-button .i,
+.mat-stroked-button .i {
+  vertical-align: center;
+  font-size: 1.25em;
 }
 
 .card-container {
